--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Brandon</h1>
+<body style="background-color:rgb(44, 44, 44);">
+    <h1 style="text-align:center;">Rachel I Had a Nightmare</h1>
+    <img src="https://th.bing.com/th/id/R.4a6296d706326a1a758234d87afeff31?rik=nDAXI9gG9fH2fg&riu=http%3a%2f%2fbestgifs.makeagif.com%2fwp-content%2fuploads%2f2016%2f03%2fbatman-gif.gif&ehk=Pm32NOdP%2bmC1H00C7t9ZPK1LA%2b4qmkfWNTfkoWrFg%2fE%3d&risl=&pid=ImgRaw&r=0" alt="batman" class="center">
+    <h2>...and peed a little</h2>
 </body>
 </html>
