--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <h1 style="text-align:center;">Rachel I Had a Nightmare</h1>
     <img src="https://th.bing.com/th/id/R.4a6296d706326a1a758234d87afeff31?rik=nDAXI9gG9fH2fg&riu=http%3a%2f%2fbestgifs.makeagif.com%2fwp-content%2fuploads%2f2016%2f03%2fbatman-gif.gif&ehk=Pm32NOdP%2bmC1H00C7t9ZPK1LA%2b4qmkfWNTfkoWrFg%2fE%3d&risl=&pid=ImgRaw&r=0" alt="batman" class="center">
     <h2>...and peed a little</h2>
-</body>
-<body2>
+    <div class="brandon">
+        <h4>btw don't forget</h4>
+    </div>
     <h3>Did You Pray Today Rachel?!?!?!</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Jn5-SbARnE4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>" 
     <h4></h4>
-</body2>
+</body>
 </html>
